--- a/output/stories/handbook.html
+++ b/output/stories/handbook.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="es"><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="utf-8"><meta name="description" content=""><meta name="author" content="Matias G. Sticchi"><title>The Nikola Handbook | Alkiller Blog</title><link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"><link href="../assets/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"><link href="../assets/css/rst.css" rel="stylesheet" type="text/css"><link href="../assets/css/code.css" rel="stylesheet" type="text/css"><link href="../assets/css/colorbox.css" rel="stylesheet" type="text/css"><link href="../assets/css/theme.css" rel="stylesheet" type="text/css"><link href="../assets/css/custom.css" rel="stylesheet" type="text/css"><!--[if lt IE 9]>
+<!DOCTYPE html><html lang="es"><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="utf-8"><meta name="description" content=""><meta name="author" content="Matias G. Sticchi"><title>The Nikola Handbook | Proyecto Alkiller</title><link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"><link href="../assets/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"><link href="../assets/css/rst.css" rel="stylesheet" type="text/css"><link href="../assets/css/code.css" rel="stylesheet" type="text/css"><link href="../assets/css/colorbox.css" rel="stylesheet" type="text/css"><link href="../assets/css/theme.css" rel="stylesheet" type="text/css"><link href="../assets/css/custom.css" rel="stylesheet" type="text/css"><!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]--><link rel="alternate" type="application/rss+xml" title="RSS" href="../rss.xml"></head><body>
 <!-- Menubar -->
@@ -14,13 +14,13 @@
         </a>
 
             <a class="brand" href="../">
-            Alkiller Blog
+            Proyecto Alkiller
             </a>
             <!-- Everything you want hidden at 940px or less, place within here -->
             <div class="nav-collapse collapse">
-                <ul class="nav"><li><a href="../archive.html">Archives</a>
-            </li><li><a href="../categories/index.html">Tags</a>
-            </li><li><a href="../rss.xml">RSS</a>
+                <ul class="nav"><li><a href="../sdgfsdg.html">Documentación</a>
+            </li><li><a href="../archive.html">Blog</a>
+            </li><li><a href="https://github.com/smatht/alkiller.git">Codigo fuente</a>
 
                 </li></ul><ul class="nav pull-right"><li>
     <a href="handbook.txt" id="sourcelink">Código</a>
@@ -886,39 +886,7 @@ If you make it so your listing ends before it starts, it's frowned upon and noth
 .. gist:: 2395294
 </pre>
 <p>Producing this:</p>
-<script src="https://gist.github.com/2395294.js"></script><noscript><pre class="literal-block">
-#include &lt;stdlib.h&gt;
-#include &lt;stdio.h&gt;
-
-int nonHeapInt;
-
-struct HeapObject
-{
-    int x;  // 因為如果找 x 的 pointer，實際上和找 HeapObject 的開頭 pointer 相同，
-            // 所以我們必需加一個y，讓我們指定 pointer 時不會指到 HeapObject 的開頭。
-    int y;
-};
-
-int main()
-{
-    struct HeapObject * heapObject = malloc(sizeof(struct HeapObject));
-
-    nonHeapInt = 10;
-    heapObject-&gt;y = 20;
-
-    printf("Start nonHeapInt:%d\n", nonHeapInt);
-    printf("Start heapObject-&gt;y:%d\n", heapObject-&gt;y);
-
-    // free(&amp;nonHeapInt); // GCC 會警告，執行 glibc 會丟 invalid pointer exception
-    // free(&amp;(heapObject-&gt;y)); // 雖然不會景告，但 glibc 還是會丟 invalid pointer exception
-
-    printf("End nonHeapInt:%d\n", nonHeapInt);
-    printf("End heapObject-&gt;y:%d\n", heapObject-&gt;y);
-
-}
-
-</pre>
-</noscript><p>This degrades gracefully if the browser doesn't support javascript.</p>
+<p>This degrades gracefully if the browser doesn't support javascript.</p>
 </div>
 <div class="section" id="slideshows">
 <h3><a class="toc-backref" href="handbook.html#id35">Slideshows</a></h3>
@@ -1113,4 +1081,4 @@ license you got it.</p>
     </li><li><a class="addthis_button_linkedin"></a>
     </li><li><a class="addthis_button_twitter"></a>
     </li></ul></div>
-    <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"></script><!-- End of social buttons --><script src="../assets/js/jquery-1.7.2.min.js" type="text/javascript"></script><script src="../assets/js/bootstrap.min.js" type="text/javascript"></script><script src="../assets/js/jquery.colorbox-min.js" type="text/javascript"></script><script type="text/javascript">jQuery("a.image-reference").colorbox({rel:"gal",maxWidth:"80%",maxHeight:"80%",scalePhotos:true});</script></body></html>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"></script><!-- End of social buttons --><script src="../assets/js/jquery-1.7.2.min.js" type="text/javascript"></script><script src="../assets/js/bootstrap.min.js" type="text/javascript"></script><script src="../assets/js/jquery.colorbox-min.js" type="text/javascript"></script><script type="text/javascript">jQuery("a.image-reference").colorbox({rel:"gal",maxWidth:"80%",maxHeight:"80%",scalePhotos:true});</script></body></html>
